# jacks

./: .gitignore  pyproject.toml
src/jacks/: __init__.py  formatter.py  pygamestuff.py  revolver.py  updater.py  walker.py
src/jacks/datas/: start_end.json
src/jacks/lottery_machine/: __init__.py
src/jacks/windows_listening_server/: __init__.py
